fixing tidbits not showing up

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,13 @@ header {
     background-color: #555;
 }
 
+.image-box {
+   display: none;
+   border: 1px solid #ccc;
+   padding: 10px;
+   margin: 10px; 
+}
+
 /*start of wordCloud*/
 
 main#wordCloud {
